2.6.0 (07-06-2021)
2.5.0 (05-04-2021)
- Refactor: changed (again) ProfessorshipReport getTotalHours calculations (value is now obtained based on the shift type)

2.4.0 (18-03-2021)
- Refactor: changed how ProfessorshipReport calculations work

2.3.4 (29-04-2020)
- Refactor: upgraded fenixedu-academic-core dependency

2.3.3 (04-04-2020)
- Refactor: upgraded fenixedu-academic-core dependency

2.3.2 (01-04-2020)
- New feature: Support for Java 11
- Refactor: upgraded fenixedu-academic-core dependency

2.3.1 (12-02-2020)
- Refactor: upgraded fenixedu-academic-core dependency

2.3.0 (18-12-2019)
- Refactor: change usage of ExecutionSemester to ExecutionInterval

2.2.3 (10-12-2019)
- Fix: compare by checkSum no longer returns null + updated pom

2.2.2 (26-09-2019)
- Refactor: update dependencies

2.2.1 (29-07-2019)
- Refactor: upgraded fenixedu-academic-core dependency 

2.2.0 (17-06-2019)
- Refactor: specification ul dependency updated