@@ -1,11 +1,13 @@
 package org.fenixedu.ulisboa.reports.services.report.course;
 
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.fenixedu.academic.domain.CompetenceCourse;
 import org.fenixedu.academic.domain.ExecutionYear;
+import org.fenixedu.academic.domain.degreeStructure.Context;
 
 import com.google.common.collect.Sets;
 
@@ -13,7 +15,7 @@ public class CompetenceCourseService {
 
     private ExecutionYear executionYear;
 
-    public void filterExecutionYear(ExecutionYear executionYear) {
+    public void filterExecutionYear(final ExecutionYear executionYear) {
         this.executionYear = executionYear;
     }
 
@@ -28,7 +30,6 @@ public class CompetenceCourseService {
         }
 
         return CompetenceCourse.readApprovedBolonhaCompetenceCourses().stream()
-                .filter(cc -> cc.getCurricularCourseContexts().stream().anyMatch(context -> context.isOpen(executionYear)))
-                .collect(Collectors.toSet());
+                .filter(cc -> cc.getBeginExecutionInterval().getExecutionYear() == executionYear).collect(Collectors.toSet());
     }
 }
