@@ -1,3 +1,5 @@
+- Refactor: CompetenceCourseService searchUniverse now only takes into account competence courses of a given execution year + ProfessorshipReport now only lists data based of a given execution year
+
 2.6.0 (07-06-2021)
 2.5.0 (05-04-2021)
 - Refactor: changed (again) ProfessorshipReport getTotalHours calculations (value is now obtained based on the shift type)
